--- a/src/app/components/content/filter/filter.component.html
+++ b/src/app/components/content/filter/filter.component.html
@@ -6,7 +6,7 @@
     </label>
     <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group"
         [(ngModel)]="selectedPlatform">
-        <mat-radio-button class="example-radio-button" [value]="platform.key" (click)="setPlatform(platform.key)"
+        <mat-radio-button class="platform-button" [value]="platform.key" (click)="setPlatform(platform.key)"
             *ngFor="let platform of platforms | keyvalue | slice: 0 : platformsExpanded ? getCount(platforms) : 5">
             {{ platform.value.name }} ({{ platform.value.count || 0 }})
         </mat-radio-button>
@@ -25,7 +25,7 @@
         <mat-icon>category</mat-icon>Type
     </label>
     <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" [(ngModel)]="selectedType">
-        <mat-radio-button class="example-radio-button" *ngFor="let type of types | keyvalue"
+        <mat-radio-button class="type-button" *ngFor="let type of types | keyvalue"
             (click)="setGameType(type.key)" [value]="type.key">
             {{ type.value.name }} ({{ type.value.count || 0 }})
         </mat-radio-button>
