--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -3,6 +3,11 @@
 .filter-container {
   margin: 1rem 0 1rem 1rem;
   background-color: var(--foreground-dark);
+  position: sticky;
+  max-height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  top: 0;
   color: var(--white);
   padding: 1rem;
   width: 220px;
@@ -33,9 +38,29 @@
     margin: 15px 0;
   }
 
-  .example-radio-button {
+  .type-button,
+  .platform-button {
     color: var(--white);
     margin: 5px;
   }
 
+}
+
+.filter-container::-webkit-scrollbar {
+  width: 12px;
+  /* width of the entire scrollbar */
+}
+
+.filter-container::-webkit-scrollbar-track {
+  background: var(--foreground-dark);
+  /* color of the tracking area */
+}
+
+.filter-container::-webkit-scrollbar-thumb {
+  background-color: var(--primary);
+  /* color of the scroll thumb */
+  border-radius: 20px;
+  /* roundness of the scroll thumb */
+  border: 3px solid var(--foreground-dark);
+  /* creates padding around scroll thumb */
 }
