Fab settings added

--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -6,7 +6,7 @@
   <swiper [slidesPerView]="'auto'" [centeredSlides]="false" [autoHeight]="true" [grabCursor]="true"
     [keyboard]="{enabled: true}" [autoplay]="{
 delay: 5000,
-disableOnInteraction: true
+disableOnInteraction: false
 }" [navigation]="true" [pagination]="{
 clickable: true
 }" style="--swiper-navigation-color: #40C4FF;--swiper-pagination-color: #40C4FF" *ngIf="bannerItems; else loading">
