--- a/src/app/components/content/filter/filter.component.html
+++ b/src/app/components/content/filter/filter.component.html
@@ -1,5 +1,6 @@
 <div class="filter-container">
 
+    <!-- Platform fields -->
     <label class="category-title" fxLayout="row" fxLayoutAlign="start center"
         matTooltip="Select an option to filter for platform">
         <mat-icon>computer</mat-icon>Platforms
@@ -20,6 +21,7 @@
         </mat-icon>
     </button>
 
+    <!-- Category -->
     <label class="category-title" fxLayout="row" fxLayoutAlign="start center"
         matTooltip="Select an option to filter for giveaway type">
         <mat-icon>category</mat-icon>Type
