--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -1,4 +1,7 @@
 <div class="content" fxLayout="row">
+    <div class="content__fab" fxHide fxShow.sm fxShow.xs>
+        <app-fab-settings></app-fab-settings>
+    </div>
     <div class="content__filter" fxShow fxHide.sm fxHide.xs>
         <app-filter [giveaways]="giveAways"></app-filter>
     </div>
@@ -7,3 +10,6 @@
         <app-list [giveaways]="giveAways"></app-list>
     </div>
 </div>
+
+
+
