--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -1,6 +1,14 @@
 .content {
   width: 100%;
 
+  &__fab {
+    position: fixed;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+  }
+
   &__filter {
     width: 300px;
   }
