--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -5,8 +5,8 @@
   </mat-card-title>
   <swiper [slidesPerView]="'auto'" [centeredSlides]="false" [autoHeight]="true" [grabCursor]="true"
     [keyboard]="{enabled: true}" [autoplay]="{
-delay: 5000,
-disableOnInteraction: false
+delay: 3000,
+disableOnInteraction: true
 }" [navigation]="true" [pagination]="{
 clickable: true
 }" style="--swiper-navigation-color: #40C4FF;--swiper-pagination-color: #40C4FF" *ngIf="bannerItems; else loading">
