--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-    --background: #222831; 
-    --foreground-dark: #393E46;
-    --foreground-light: #40C4FF;
+    --background: #261C2C; 
+    --foreground-dark: #3E2C41;
+    --foreground-light: #6E85B2;
+    --primary: #5C527F;
     --grey: #B2B1B9;
-    --primary: #9b9090;
     --white: #F7F6F2;
 }
 
