--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -67,8 +67,8 @@ img {
 
 .view-button {
   width: 100%;
-  background-color: #40C4FF;
-  color: #F7F6F2;
+  background-color: #E8E8E8;
+  color: #A6F0C6;
   margin-top: 1rem;
 }
 
