--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@ mat-toolbar {
   width: 100%;
 
   .title {
-    color: var(--foreground-light);
+    color: var(--white);
     font-weight: 500;
     font-size: 1.5rem;
     letter-spacing: 1px;
