--- a/src/app/components/content/list-item/list-item.component.html
+++ b/src/app/components/content/list-item/list-item.component.html
@@ -5,7 +5,7 @@
             alt="image failed to load">
         <mat-card-title>{{ giveaway.title }}</mat-card-title>
         <mat-card-subtitle>
-            <mat-chip-list aria-label="Fish selection">
+            <mat-chip-list>
                 <mat-chip [ngStyle]="getBackgroundColor(giveaway.type)">{{ giveaway.type }}</mat-chip>
             </mat-chip-list>
         </mat-card-subtitle>
