--- a/src/app/components/details/details.component.scss
+++ b/src/app/components/details/details.component.scss
@@ -35,32 +35,30 @@
         mat-card-subtitle {
           font-size: 1rem;
           line-height: 1.2rem;
-          color: var(--primary);
-          font-weight: 500;
         }
 
         .platform {
-          color: var(--grey);
+          color: var(--white);
+          font-weight: 500;
           font-size: .9rem;
-          margin-bottom: .5rem;
         }
-
+    
         .description {
           color: var(--primary);
           font-size: 1rem;
           margin-bottom: 0;
-
+    
           .free {
-            color: var(--white);
+            color: var(--primary);
             margin-right: .5rem;
             font-weight: 500;
           }
-
+    
           .worth {
             text-decoration: line-through;
             font-size: .9rem;
-            color: var(--foreground-light);
-
+            color: var(--grey);
+    
             &.na {
               text-decoration: unset;
             }
@@ -69,21 +67,20 @@
       }
 
       .obtain-button {
-        color: var(--white);
-        background-color: var(--foreground-light);
+        color: var(--primary);
+        background-color: var(--background);
         height: 3rem;
         width: 16rem;
         border-radius: 5px;
         margin-top: .5rem;
         margin-bottom: .5rem;
-        font-size: 1.2rem;
-        border: 1px solid var(--white);
+        font-size: 1rem;
       }
     }
 
     mat-card-content {
       margin-top: $defaultPadding;
-      white-space: pre-line;
+      white-space: pre-line; // handle tags in text like br in text
       color: var(--white);
       font-size: .9rem;
       line-height: 1.5rem;
@@ -111,4 +108,21 @@
 
 .spacer {
   flex: 1 1 auto;
+}
+
+.loading {
+  width: 100%;
+  height: $swiper-height;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.small-image {
+  margin-bottom: 20px;
+}
+
+.small-button {
+  margin-top: 20px;
+  width: 100% !important;
 }
