--- a/src/app/components/content/content.component.html
+++ b/src/app/components/content/content.component.html
@@ -3,7 +3,7 @@
         <app-fab-settings></app-fab-settings>
     </div>
     <div class="content__filter" fxShow fxHide.sm fxHide.xs>
-        <app-filter [giveaways]="giveAways"></app-filter>
+        <app-filter [giveaways]="giveAways" [layout]="'component'"></app-filter>
     </div>
     <div class="content__list">
         <app-sort [giveaways]="giveAways"></app-sort>
