--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -31,6 +31,11 @@
             <p class="instructions" [innerHtml]="giveaway.instructions"></p>
         </mat-card-content>
     </mat-card>
+
+    <button mat-button class="details-container__back-button" routerLink="/">
+        <mat-icon>arrow_back</mat-icon>
+        Back to homepage
+    </button>
 </div>
 
 <ng-template #loading>
