--- a/src/app/components/fab-settings/fab-settings.component.scss
+++ b/src/app/components/fab-settings/fab-settings.component.scss
@@ -1,4 +1,4 @@
 .fab-settings {
-  color: var(--foreground-light);
-  background-color: var(--white); 
+  color: var(--white);
+  background-color: var(--primary); 
 }
