--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -4,7 +4,7 @@
   &__fab {
     position: fixed;
     top: 90%;
-    left: 10%;
+    right: 0%;
     transform: translate(-50%, -50%);
     z-index: 9999;
   }
