--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -1,13 +1,12 @@
 @import '../../../../variables.scss';
 
 .filter-container {
-  margin: 1rem 0 1rem 1rem;
   background-color: var(--foreground-dark);
-  position: sticky;
+  // position: sticky;
+  // top: 0;
   max-height: 100vh;
   overflow-y: auto;
   overflow-x: hidden;
-  top: 0;
   color: var(--white);
   padding: 1rem;
   width: 220px;
@@ -27,7 +26,7 @@
 
   .show-hide {
     width: 100%;
-    color: var(--foreground-light);
+    color: var(--primary);
     font-size: .9rem;
     margin-bottom: 15px;
   }
