--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-contaner" autosize>
+<mat-sidenav-container autosize>
   <mat-sidenav #sidenav mode="over" class="sidenav-container" (openedChange)="setSidenavState($event)"
     [opened]="sidenavOpened">
     <app-filter [giveaways]="giveAways" [layout]="'sidenav'"></app-filter>
