--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,8 @@
 <mat-toolbar fxLayout="row" fxLayoutAlign="center center">
-    <a class="source" href="https://gamerpower.com">Source of data provided by: GamerPower</a>
+    <a class="source" href="https://gamerpower.com">
+        Source of data provided by:
+        <span class="source__link">
+            GamerPower
+        </span>
+    </a>
 </mat-toolbar>
