--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -8,5 +8,9 @@ mat-toolbar {
     font-size: 1rem;
     font-weight: 500;
     text-decoration: unset;
+
+    &__link {
+        color: var(--primary);
+    }
   }
 }
