--- a/src/app/components/content/filter/filter.component.scss
+++ b/src/app/components/content/filter/filter.component.scss
@@ -3,6 +3,8 @@
 .filter-container {
   background-color: var(--foreground-dark);
   max-height: 100vh;
+  position: sticky;
+  top: 0;
   overflow-y: auto;
   overflow-x: hidden;
   color: var(--white);
