--- a/src/app/components/content/content.component.scss
+++ b/src/app/components/content/content.component.scss
@@ -3,9 +3,7 @@
 
   &__fab {
     position: fixed;
-    top: 90%;
-    right: 0%;
-    transform: translate(-50%, -50%);
+    // transform: translate(-50%, -50%);
     z-index: 9999;
   }
 
@@ -15,5 +13,15 @@
 
   &__list {
     width: 100%;
+  }
+
+  .left {
+    top: 90%;
+    left: 10%;
+  }
+
+  .right {
+    top: 90%;
+    right: 10%;
   }
 }
