--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-    --background: #1B262C ; 
-    --foreground-dark: #0F4C75;
-    --foreground-light: #77ACF1;
+    --background: #0D335D ; 
+    --foreground-dark: #1A508B;
+    --foreground-light: #ABC2E8;
     --grey: #C9CCD5;
     --primary: #ff8000;
     --white: #F7F6F2;
@@ -19,19 +19,21 @@ body {
     overflow-y: auto;
 }
 
+/*
 body::-webkit-scrollbar {
-    width: 12px;               /* width of the entire scrollbar */
+    width: 12px;             
 }
   
 body::-webkit-scrollbar-track {
-    background: var(--foreground-dark);        /* color of the tracking area */
+    background: var(--foreground-dark);     
 }
   
 body::-webkit-scrollbar-thumb {
-    background-color: var(--foreground-light);    /* color of the scroll thumb */
-    border-radius: 20px;       /* roundness of the scroll thumb */
-    border: 3px solid var(--foreground-dark);  /* creates padding around scroll thumb */
+    background-color: var(--foreground-light); 
+    border-radius: 20px;
+    border: 3px solid var(--foreground-dark);
 }
+*/
 
 .mat-progress-spinner circle, .mat-spinner circle {
     stroke: var(--foreground-light) !important;
