--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ mat-toolbar {
   justify-content: space-between;
 
   .title {
-    color: var(--primary);
+    color: var(--white);
     font-weight: 500;
     font-size: 1.5rem;
     letter-spacing: 1px;
