Progress spinner implemented

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,8 @@
     <app-filter [giveaways]="giveAways" [layout]="'sidenav'"></app-filter>
   </mat-sidenav>
 
+  <app-progress-spinner></app-progress-spinner>
+
   <div class="giveaway-tracker">
     <div class="giveaway-tracker__header">
       <app-header></app-header>
